# coursework_2

./: README.md  main.py  pyproject.toml  vacancies.json
data/: hh.py
src/: api.py  savers.py  utils.py  vacancy.py
tests/: test_headhunter_api.py  test_json_saver.py  test_main.py  test_vacancy.py
